# thenewboston-Backend

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  BUSINESS_REQUIREMENTS.md  CHAT_REQUIREMENTS.md  CHAT_REQUIREMENTS_CLAUDE.md  CHAT_REQUIREMENTS_CODEX.md  CONNECT_FIVE_BUSINESS_REQUIREMENTS.md  CONNECT_FIVE_TECHNICAL_PLAN.md  DEPLOY.md  Dockerfile  FRONTEND_DEPLOYMENT_NOTIFICATIONS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: backend-deploy.yml  quality-assurance.yml
scripts/: entrypoint.sh  production_data.py  run-celery-beat.sh  run-celery.sh  run-discord-bot.sh  run-django.sh  run-order-processing-engine.sh
thenewboston/: conftest.py  manage.py
thenewboston/api/: accounts.py
thenewboston/art/: admin.py  apps.py  urls.py
thenewboston/art/filters/: artwork.py  artwork_transfer.py
thenewboston/art/migrations/: 0001_initial.py  0002_artworktransfer.py  0003_artwork_price_amount_artwork_price_core.py  0004_artworktransfer_price_amount_and_more.py  0005_artwork_image_url.py
thenewboston/art/models/: __init__.py  artwork.py  artwork_transfer.py
thenewboston/art/serializers/: artwork.py  artwork_purchase.py  artwork_transfer.py  openai_image.py
thenewboston/art/tests/: test_openai_image.py
thenewboston/art/views/: artwork.py  artwork_purchase.py  artwork_transfer.py  openai_image.py
thenewboston/authentication/: apps.py  urls.py
thenewboston/authentication/serializers/: login.py  token.py
thenewboston/authentication/tests/: test_rest_api.py
thenewboston/authentication/views/: login.py
thenewboston/blocks/: apps.py
thenewboston/blocks/migrations/: 0001_initial.py  0002_block_created_date.py
thenewboston/blocks/models/: block.py
thenewboston/bonsais/: __init__.py  admin.py  apps.py  urls.py
thenewboston/bonsais/migrations/: 0001_initial.py  0002_delete_bonsai_models.py  0002_remove_bonsaiimage_url_bonsaiimage_image.py
thenewboston/bonsais/models/: __init__.py  bonsai.py  bonsai_highlight.py  bonsai_image.py
thenewboston/bonsais/serializers/: __init__.py  bonsai.py  bonsai_highlight.py  bonsai_image.py
thenewboston/bonsais/tests/: test_bonsai_api.py
thenewboston/bonsais/views/: __init__.py  bonsai.py
thenewboston/connect_five/: admin.py  apps.py  constants.py  enums.py  exceptions.py  pagination.py  tasks.py  urls.py
thenewboston/connect_five/consumers/: __init__.py  chat.py  connect_five.py
thenewboston/connect_five/migrations/: 0001_initial.py  0002_remove_connect_five_idempotency.py  0003_alter_connectfivechallenge_options_and_more.py  0004_alter_connectfivechallenge_options_and_more.py  0005_connect_five_elo_rematch.py  0006_alter_connectfivechallenge_status.py  0007_reset_connect_five_data_and_remove_cross4.py  0008_alter_connectfivematch_status_and_more.py  0009_remove_connectfivestats_draws_and_update_statuses.py  0010_connectfivechatmessage.py  0011_connectfiveelosnapshot.py
thenewboston/connect_five/models/: __init__.py  challenge.py  chat_message.py  elo_snapshot.py  escrow.py  match.py  match_event.py  match_player.py  stats.py
thenewboston/connect_five/serializers/: __init__.py  challenge.py  chat_message.py  elo_snapshot.py  leaderboard.py  match.py  move.py  purchase.py
thenewboston/connect_five/services/: clocks.py  elo.py  escrow.py  match.py  rules.py  streaming.py
thenewboston/connect_five/views/: __init__.py  challenge.py  elo_snapshot.py  leaderboard.py  match.py
thenewboston/contributions/: admin.py  apps.py  tasks.py  urls.py
thenewboston/contributions/business_logic/: base.py  process.py  sync.py
thenewboston/contributions/migrations/: 0001_initial.py  0002_alter_contribution_issue_alter_contribution_pull.py  0003_contribution_contribution_type_and_more.py
thenewboston/contributions/models/: __init__.py  contribution.py
thenewboston/contributions/serializers/: contribution.py
thenewboston/contributions/tests/: test_contributions_api.py  test_manual_contribution.py  test_sync_contributions.py
thenewboston/contributions/utils/: contribution.py  contributor.py
thenewboston/contributions/views/: contribution.py
thenewboston/cores/: admin.py  apps.py  urls.py
thenewboston/cores/migrations/: 0001_initial.py  0002_initial.py
thenewboston/cores/models/: __init__.py  core.py
thenewboston/cores/serializers/: core.py
thenewboston/cores/tests/: test_rest_api.py
thenewboston/cores/utils/: core.py
thenewboston/cores/views/: core.py
thenewboston/currencies/: admin.py  apps.py  urls.py
thenewboston/currencies/filters/: __init__.py  currency.py  currency_balance.py  mint.py  mint_chart_data.py  total_amount_minted.py  whitepaper.py
thenewboston/currencies/migrations/: 0001_initial.py  0002_alter_currency_options.py  0002_initial.py  0003_alter_currency_currency_type_alter_currency_domain.py  0003_alter_currency_options.py  0004_make_logo_required.py  0005_alter_currency_domain_mint.py  (+4 more)
thenewboston/discord/: apps.py  bot.py  constants.py
thenewboston/exchange/: admin.py  apps.py  tasks.py  urls.py
thenewboston/general/: admin.py  advisory_locks.py  apps.py  authentication.py  commands.py  constants.py  enums.py  exceptions.py  fields.py  init_django.py  managers.py  middleware.py  misc.py  pagination.py  permissions.py  serializers.py  urls.py  validators.py  views.py
thenewboston/github/: admin.py  apps.py  client.py
thenewboston/ia/: admin.py  apps.py  urls.py
thenewboston/invitations/: admin.py  apps.py  urls.py
thenewboston/notifications/: admin.py  apps.py  urls.py
thenewboston/orders/: admin.py  apps.py  consumers.py  routing.py  urls.py
thenewboston/project/: asgi.py  celery.py  routing.py  tasks.py  urls.py  wsgi.py
thenewboston/shop/: admin.py  apps.py  urls.py
thenewboston/social/: admin.py  apps.py  urls.py
thenewboston/transfers/: admin.py  apps.py  urls.py
thenewboston/university/: admin.py  apps.py  urls.py
thenewboston/users/: admin.py  apps.py  tasks.py  throttles.py  urls.py  validators.py
thenewboston/wallets/: admin.py  apps.py  urls.py
thenewboston/web/: urls.py
(+377 files in other folders)
