[tool.poetry]
name = "thenewboston-backend"
version = "0.1.0"
description = ""
authors = ["bucky <buckyroberts@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "thenewboston"}]

[tool.poetry.dependencies]
boto3 = "^1.26.155"
channels = {extras = ["daphne"], version = "^4.0.0"}
django = "^4.2.2"
django-cors-headers = "^4.1.0"
django-filter = "^23.2"
django-split-settings = "^1.2.0"
django-storages = "^1.13.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
pillow = "^9.5.0"
psycopg2 = "^2.9.6"
pydantic = "^1.10.9"
pynacl = "^1.5.0"
python = "^3.10"
pyyaml = "^6.0"
requests = "^2.31.0"
whitenoise = "^6.5.0"
celery = {extras = ["redis"], version = "^5.3.6"}
channels-redis = "^4.2.0"
openai = "^1.8.0"
promptlayer = "^0.4.2"
langchain = "^0.1.1"
pygithub = "^2.3.0"

[tool.poetry.group.dev.dependencies]
colorlog = "^6.7.0"
pre-commit = "^3.3.3"
pytest = "^8.1.1"
pytest-xdist = "^3.3.1"
pytest-django = "^4.5.2"
model-bakery = "^1.12.0"
vcrpy = "^6.0.1"
pytest-env = "^1.1.3"
pytest-cov = "^5.0.0"

[tool.isort]
line_length = 119
multi_line_output = 5

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "thenewboston.project.settings"
django_find_project = false
python_files = "test_*.py"
testpaths = ["thenewboston"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"
env = [
    "PYTEST_RUNNING = true",
]

[tool.yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = "google"
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
